Use URI instead of URL in FeatureUtil
Migrate users of legacy URL constructor to use URI, as that is all we
really need.

Change-Id: I750ac78e26342035cb60097930198ef089021bc2
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>